//! Admin service implementation

use crate::proto::admin::*;
use tokio_stream::wrappers::ReceiverStream;
use tonic::{Request, Response, Status};
use tracing::debug;

#[derive(Debug, Clone, Default)]
pub struct AdminServiceImpl {}

impl AdminServiceImpl {
    pub fn new() -> Self {
        Self {}
    }
}

#[tonic::async_trait]
impl admin_service_server::AdminService for AdminServiceImpl {
    async fn get_system_stats(&self, _req: Request<GetSystemStatsRequest>) -> Result<Response<GetSystemStatsResponse>, Status> {
        debug!("GetSystemStats called");
        Ok(Response::new(GetSystemStatsResponse {
            stats: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "System stats retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_service_info(&self, _req: Request<GetServiceInfoRequest>) -> Result<Response<GetServiceInfoResponse>, Status> {
        debug!("GetServiceInfo called");
        Ok(Response::new(GetServiceInfoResponse {
            info: Some(ServiceInfo {
                name: "llm-optimizer-grpc".to_string(),
                version: env!("CARGO_PKG_VERSION").to_string(),
                build_time: "".to_string(),
                git_commit: "".to_string(),
                started_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
                uptime_seconds: 0,
                mode: crate::proto::common::DeploymentMode::Standalone as i32,
                environment: std::collections::HashMap::new(),
            }),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Service info retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_database_stats(&self, _req: Request<GetDatabaseStatsRequest>) -> Result<Response<GetDatabaseStatsResponse>, Status> {
        debug!("GetDatabaseStats called");
        Ok(Response::new(GetDatabaseStatsResponse {
            stats: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Database stats retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_cache_stats(&self, _req: Request<GetCacheStatsRequest>) -> Result<Response<GetCacheStatsResponse>, Status> {
        debug!("GetCacheStats called");
        Ok(Response::new(GetCacheStatsResponse {
            stats: vec![],
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Cache stats retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn set_log_level(&self, _req: Request<SetLogLevelRequest>) -> Result<Response<SetLogLevelResponse>, Status> {
        debug!("SetLogLevel called");
        Ok(Response::new(SetLogLevelResponse {
            previous_level: LogLevel::Info as i32,
            new_level: LogLevel::Info as i32,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Log level set".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn clear_cache(&self, _req: Request<ClearCacheRequest>) -> Result<Response<ClearCacheResponse>, Status> {
        debug!("ClearCache called");
        Ok(Response::new(ClearCacheResponse {
            entries_cleared: 0,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Cache cleared".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn trigger_gc(&self, _req: Request<TriggerGcRequest>) -> Result<Response<TriggerGcResponse>, Status> {
        debug!("TriggerGC called");
        Ok(Response::new(TriggerGcResponse {
            memory_freed_bytes: 0,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "GC triggered".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn reload_config(&self, _req: Request<ReloadConfigRequest>) -> Result<Response<ReloadConfigResponse>, Status> {
        debug!("ReloadConfig called");
        Ok(Response::new(ReloadConfigResponse {
            reloaded: true,
            changes: vec![],
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Config reloaded".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn get_migrations(&self, _req: Request<GetMigrationsRequest>) -> Result<Response<GetMigrationsResponse>, Status> {
        debug!("GetMigrations called");
        Ok(Response::new(GetMigrationsResponse {
            migrations: vec![],
            current_version: 0,
            latest_version: 0,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Migrations retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn run_migrations(&self, _req: Request<RunMigrationsRequest>) -> Result<Response<RunMigrationsResponse>, Status> {
        debug!("RunMigrations called");
        Ok(Response::new(RunMigrationsResponse {
            previous_version: 0,
            new_version: 0,
            applied: vec![],
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Migrations run".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn rollback_migrations(&self, _req: Request<RollbackMigrationsRequest>) -> Result<Response<RollbackMigrationsResponse>, Status> {
        debug!("RollbackMigrations called");
        Ok(Response::new(RollbackMigrationsResponse {
            previous_version: 0,
            new_version: 0,
            rolled_back: vec![],
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Migrations rolled back".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn list_feature_flags(&self, _req: Request<ListFeatureFlagsRequest>) -> Result<Response<ListFeatureFlagsResponse>, Status> {
        debug!("ListFeatureFlags called");
        Ok(Response::new(ListFeatureFlagsResponse {
            flags: vec![],
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Feature flags retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn set_feature_flag(&self, _req: Request<SetFeatureFlagRequest>) -> Result<Response<SetFeatureFlagResponse>, Status> {
        debug!("SetFeatureFlag called");
        Ok(Response::new(SetFeatureFlagResponse {
            flag: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Feature flag set".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn list_background_jobs(&self, _req: Request<ListBackgroundJobsRequest>) -> Result<Response<ListBackgroundJobsResponse>, Status> {
        debug!("ListBackgroundJobs called");
        Ok(Response::new(ListBackgroundJobsResponse {
            jobs: vec![],
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Background jobs retrieved".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn cancel_background_job(&self, _req: Request<CancelBackgroundJobRequest>) -> Result<Response<CancelBackgroundJobResponse>, Status> {
        debug!("CancelBackgroundJob called");
        Ok(Response::new(CancelBackgroundJobResponse {
            job: None,
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Job cancelled".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    async fn graceful_shutdown(&self, _req: Request<GracefulShutdownRequest>) -> Result<Response<GracefulShutdownResponse>, Status> {
        debug!("GracefulShutdown called");
        Ok(Response::new(GracefulShutdownResponse {
            initiated: true,
            shutdown_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            status: Some(crate::proto::common::ApiResponse {
                status: crate::proto::common::ResponseStatus::Success as i32,
                message: "Shutdown initiated".to_string(),
                errors: vec![],
            }),
        }))
    }
    
    type SubscribeSystemEventsStream = ReceiverStream<Result<SystemEvent, Status>>;
    async fn subscribe_system_events(&self, _req: Request<SubscribeSystemEventsRequest>) -> Result<Response<Self::SubscribeSystemEventsStream>, Status> {
        debug!("SubscribeSystemEvents called");
        let (_, rx) = tokio::sync::mpsc::channel(100);
        Ok(Response::new(ReceiverStream::new(rx)))
    }
}
